--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": 246348000,
+    "database": "galeiradehabilidades",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3306
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": 246348000,
+    "database": "galeiradehabilidades",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3306
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": 246348000,
+    "database": "galeiradehabilidades",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3306
   }
 }
