--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
-    "sequelize": "^6.8.0"
+    "sequelize": "^5.21.7",
+    "sequelize-cli": "^5.5.1"
   }
 }
