Atualização do Banco de dados

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,24 +1,24 @@
 {
   "development": {
     "username": "root",
-    "password": 246348000,
-    "database": "galeiradehabilidades",
+    "password": "guigusbon",
+    "database": "galeriadehabilidades",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": 3306
   },
   "test": {
     "username": "root",
-    "password": 246348000,
-    "database": "galeiradehabilidades",
+    "password": "guigusbon",
+    "database": "galerradehabilidades",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": 3306
   },
   "production": {
     "username": "root",
-    "password": 246348000,
-    "database": "galeiradehabilidades",
+    "password": "guigusbon",
+    "database": "galeriadehabilidades",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": 3306
