--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./api/index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
-    "sequelize": "^5.21.7",
+    "sequelize": "^5.22.4",
     "sequelize-cli": "^5.5.1"
   }
 }
